--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -4,17 +4,29 @@
       "id": 1,
       "title": "Goudla Block Chain Project",
       "description": "Led blockchain integration using test networks for cryptocurrency protocols.",
-      "tags": ["#Blockchain", "#Cryptocurrency", "#Testnet", "NodeJs", "MongoDB"],
+      "tags": [
+        "#Blockchain",
+        "#Cryptocurrency",
+        "#Testnet",
+        "NodeJs",
+        "MongoDB"
+      ],
       "links": ["https://github.com/GD-0606/blockchain"],
-      "mainImageUrl": "/blockchain.jpg"
+      "mainImageUrl": { "url": "/blockchain.jpg", "alt": "blockchain pic" }
     },
     {
       "id": 2,
       "title": "Hatimi Hotel Management System",
       "description": "Built a full-stack hotel booking platform with admin dashboard.",
-      "tags": ["#BookingSystem", "#HotelManagement", "#MERNStack", "NodeJs", "#PaymentGateway"],
+      "tags": [
+        "#BookingSystem",
+        "#HotelManagement",
+        "#MERNStack",
+        "NodeJs",
+        "#PaymentGateway"
+      ],
       "links": ["https://github.com/GD-0606/bookingServer"],
-      "mainImageUrl": "/hatimi.png"
+      "mainImageUrl": { "url": "/hatimi.png", "alt": "hatimi pic" }
     }
   ]
 }
